fix(Table): fix scrollbar

--- a/packages/components/src/components/Table/Table.module.scss
+++ b/packages/components/src/components/Table/Table.module.scss
@@ -1,6 +1,6 @@
 .tableContainer {
   width: 100%;
-  overflow: scroll;
+  overflow-x: auto;
 }
 
 .table {
